--- a/QualityManager/QualityManager/appsettings.Development.json
+++ b/QualityManager/QualityManager/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=ServerName;Initial Catalog=DatabaseName;Integrated security=True;MultipleActiveResultSets=true;TrustServerCertificate=true;"
+  },
 }
