--- a/QualityManager/QualityManager/appsettings.Development.json
+++ b/QualityManager/QualityManager/appsettings.Development.json
@@ -7,6 +7,14 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=ServerName;Initial Catalog=DatabaseName;Integrated security=True;MultipleActiveResultSets=true;TrustServerCertificate=true;"
+    "DefaultConnection": "Data Source=DESKTOP-BKQHMP1\\SQLEXPRESS;Initial Catalog=FoodQuality;Integrated security=True;MultipleActiveResultSets=true;TrustServerCertificate=true;"
   },
+  "RabbitMq": {
+    "HostName": "rabbitmq",
+    "Port": "5672",
+    "UserName": "guest",
+    "Password": "guest",
+    "FoodAnalysisRequestQueue": "food_analysis_request",
+    "FoodAnalysisResponseQueue": "food_analysis_response"
+  }
 }
