--- a/QualityManager/QualityManager/appsettings.json
+++ b/QualityManager/QualityManager/appsettings.json
@@ -7,6 +7,14 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=ServerName;Initial Catalog=DatabaseName;Integrated security=True;MultipleActiveResultSets=true;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=sqlserver,1433;Database=QualityDB;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;"
+  },
+  "RabbitMq": {
+    "HostName": "rabbitmq",
+    "Port": "5672",
+    "UserName": "guest",
+    "Password": "guest",
+    "FoodAnalysisRequestQueue": "food_analysis_request",
+    "FoodAnalysisResponseQueue": "food_analysis_response"
   }
 }
