--- a/QualityManager/QualityManager.Test/QualityManager.Test.csproj
+++ b/QualityManager/QualityManager.Test/QualityManager.Test.csproj
@@ -25,4 +25,10 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
